--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,8 @@
             void main() {
                 // gl_FragColor is a special variable a fragment shader
                 // is responsible for setting
-                gl_FragColor = f_color;
+                gl_FragColor = f_color, 1;
+                // gl_FragColor = vec4(1, 0, 0.5, 1);
             }
         
         </script>
