Move square related code to a different file

--- a/src/index.html
+++ b/src/index.html
@@ -79,5 +79,6 @@
         <script src="./webgl-utils.js"></script>
         <script src="./utils.js"></script>
         <script src="./square.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
