Fix bug line dilation

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
                 <div class="row ms-3">
                     <label><strong>Select Shape to Draw</strong></label>
                     <select id="shape-selector" class="form-select" aria-label="Default select example">
-                        <option value="0">Line</option>
-                        <option value="1" selected>Square</option>
+                        <option value="0" selected>Line</option>
+                        <option value="1">Square</option>
                         <option value="2">Rectangle</option>
                         <option value="3">Polygon</option>
                     </select>
