feat: polygon base + vertex color

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
                     <option value="1">Square</option>
                     <option value="2">Rectangle</option>
                     <option value="3">Polygon</option>
+                    <option value="4">Polygon Hull</option>
                 </select>
                 <label><strong>Click Mode</strong></label>
                 <div class="form-check">
@@ -38,6 +39,7 @@
                         Select Shape
                     </label>
                 </div>
+                <button id="polygon-save" hidden="true">Save</button>
 
                 <strong><label for="dilation-slider" class="form-label">Shape Dilation (disabled, click a shape to
                         use)</label></strong>
@@ -96,6 +98,7 @@
     <script src="./line.js"></script>
     <script src="./square.js"></script>
     <script src="./rectangle.js"></script>
+    <script src="./polygon.js"></script>
     <script src="./index.js"></script>
 </body>
 
