--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <canvas id="c" class="border border-dark align-middle"></canvas>
         </div>
         <div class="col-4 border border-primary-subtle bg-dark text-light">
-            <div class="row ms-3">
+            <div class="row ms-3 pe-5 pt-4">
                 <label><strong>Select Shape to Draw</strong></label>
                 <select id="shape-selector" class="form-select" aria-label="Default select example">
                     <option value="0" selected>Line</option>
@@ -54,6 +54,14 @@
                     </strong>
                     <input type="range" class="form-range" name="dilation-slider" id="dilation-slider" min="0.25"
                         max="3" value="1" step="0.25">
+                </div>
+                <div id="rotation-speed-container" hidden="true">
+                    <strong>
+                        <label for="rotation-speed-slider" class="form-label">Rotation Speed</label>
+                    </strong>
+                    <input type="range" class="form-range" name="rotation-speed-slider" id="rotation-speed-slider"
+                        min="-1" max="1" value="0" step="0.01">
+                    <button id="stop-spin">Stop Spin</button>
                 </div>
                 <div id="colorPicker-container" hidden="true">
                     <strong>
