feat: add delete vertex for polygon

--- a/src/index.html
+++ b/src/index.html
@@ -61,13 +61,14 @@
                     </strong>
                     <input type="range" class="form-range" name="rotation-speed-slider" id="rotation-speed-slider"
                         min="-1" max="1" value="0" step="0.01">
-                    <button id="stop-spin">Stop Spin</button>
+                    <button id="stop-spin" hidden="true">Stop Spin</button>
                 </div>
-                <div id="colorPicker-container" hidden="true">
+                <div id="editVertex-container" hidden="true">
                     <strong>
                         <label class="form-label" for="colorPicker">Select Vertex Color</label>
                     </strong>
                     <input class="form-range" type="color" name="colorPicker" id="colorPicker" value="#FFFF00">
+                    <button id="delete-vertex" hidden="true">Delete Vertex</button>
                 </div>
             </div>
         </div>
